--- a/package.json
+++ b/package.json
@@ -2,16 +2,41 @@
   "name": "ark",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "commit": "git-cz"
+  },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-angular": "^17.1.0",
+    "@nrwl/angular": "^14.8.2",
     "@nrwl/cli": "14.8.2",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "14.8.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "git-cz": "^4.9.0",
+    "husky": "^8.0.1",
     "nx": "14.8.2",
     "prettier": "^2.6.2",
+    "standard-version": "^9.5.0",
     "typescript": "~4.8.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,scss,ts,html,component.html}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS"
+    }
   },
   "workspaces": [
     "packages/**"
