--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nrwl/workspace": "14.8.2",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "eslint": "~8.15.0",
@@ -37,7 +38,12 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.2",
+    "ng-packagr": "~14.2.0",
     "nx": "14.8.2",
+    "postcss": "^8.4.5",
+    "postcss-import": "~14.1.0",
+    "postcss-preset-env": "~7.5.0",
+    "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "standard-version": "^9.5.0",
     "ts-jest": "28.0.5",
@@ -74,6 +80,7 @@
     "@angular/router": "~14.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
   }
 }
