--- a/package.json
+++ b/package.json
@@ -8,25 +8,24 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.2.0",
-    "@angular-eslint/eslint-plugin": "~14.0.4",
-    "@angular-eslint/eslint-plugin-template": "~14.0.4",
-    "@angular-eslint/template-parser": "~14.0.4",
-    "@angular/cli": "~14.2.0",
-    "@angular/compiler-cli": "~14.2.0",
-    "@angular/language-service": "~14.2.0",
+    "@angular-devkit/build-angular": "15.0.4",
+    "@angular-eslint/eslint-plugin": "15.0.0",
+    "@angular-eslint/eslint-plugin-template": "15.0.0",
+    "@angular-eslint/template-parser": "15.0.0",
+    "@angular/cli": "~15.0.0",
+    "@angular/compiler-cli": "15.0.4",
+    "@angular/language-service": "15.0.4",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-angular": "^17.1.0",
-    "@nrwl/angular": "15.0.1",
-    "@nrwl/cli": "15.0.1",
-    "@nrwl/eslint-plugin-nx": "15.0.1",
-    "@nrwl/jest": "15.0.1",
-    "@nrwl/linter": "15.0.1",
-    "@nrwl/nx-cloud": "15.0.0",
-    "@nrwl/workspace": "15.0.1",
+    "@nrwl/angular": "15.3.3",
+    "@nrwl/cli": "15.3.3",
+    "@nrwl/eslint-plugin-nx": "15.3.3",
+    "@nrwl/jest": "15.3.3",
+    "@nrwl/linter": "15.3.3",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/workspace": "15.3.3",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
-    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "eslint": "~8.15.0",
@@ -37,9 +36,9 @@
     "husky": "^8.0.1",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "~12.2.2",
-    "ng-packagr": "~14.2.0",
-    "nx": "15.0.1",
+    "jest-preset-angular": "12.2.3",
+    "ng-packagr": "15.0.3",
+    "nx": "15.3.3",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
@@ -70,18 +69,16 @@
     "packages/**"
   ],
   "dependencies": {
-    "@angular/animations": "~14.2.0",
-    "@angular/common": "~14.2.0",
-    "@angular/compiler": "~14.2.0",
-    "@angular/core": "~14.2.0",
-    "@angular/forms": "~14.2.0",
-    "@angular/platform-browser": "~14.2.0",
-    "@angular/platform-browser-dynamic": "~14.2.0",
-    "@angular/router": "~14.2.0",
+    "@angular/animations": "15.0.4",
+    "@angular/common": "15.0.4",
+    "@angular/compiler": "15.0.4",
+    "@angular/core": "15.0.4",
+    "@angular/forms": "15.0.4",
+    "@angular/platform-browser": "15.0.4",
+    "@angular/platform-browser-dynamic": "15.0.4",
+    "@angular/router": "15.0.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
   }
 }
-
