test(ark): 💍 basic test suite, code comments, some refactoring

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@groupp/ark": ["packages/ark/src/index.ts"]
+      "@e-square/ark": ["packages/ark/src/index.ts"],
+      "@e-square/ark/testing": ["packages/ark/testing/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
