chore(docs): 🤖 added docusaurus to the repo
✅ Closes: #860pejz01

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "commit": "git-cz",
     "postinstall": "ngcc --properties es2020 browser module main",
     "release": "standard-version release -t @e-square/ark\\@ --release-as major",
-    "prerelease": "standard-version release -t @e-square/ark\\@ --release-as major --prerelease next"
+    "prerelease": "standard-version release -t @e-square/ark\\@ --release-as major --prerelease next",
+    "docs:start": "nx start docs",
+    "docs:build": "nx build docs"
   },
   "private": true,
   "devDependencies": {
