--- a/packages/ark/tsconfig.lib.json
+++ b/packages/ark/tsconfig.lib.json
@@ -5,7 +5,7 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": [],
+    "types": ["jest"],
     "target": "ES2022",
     "useDefineForClassFields": false
   },
