feat(ark): 🎸 complete remastering
Removed providers, implemented own state updating engine, separated rxjs
part, separated angular part, added hooks, extenders and modifiers

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -59,7 +59,15 @@
       "files": ["*.ts", "*.tsx"],
       "extends": ["plugin:@nrwl/nx/typescript"],
       "rules": {
-        "@typescript-eslint/explicit-function-return-type": ["error"],
+        "@typescript-eslint/explicit-function-return-type": [
+          "error", 
+          {
+            "allowExpressions": true,
+            "allowTypedFunctionExpressions": true,
+            "allowConciseArrowFunctionExpressionsStartingWithVoid": true,
+            "allowHigherOrderFunctions": false
+          }
+        ],
         "@typescript-eslint/member-ordering": [
           "warn",
           {
